--- a/styles/main.css
+++ b/styles/main.css
@@ -23,16 +23,17 @@ body {
     width: 1100px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-wrap: wrap;
-    padding: 30px;
+    padding-top: 300px;
 
 }
 
 .container .card {
     position: relative;
     max-width: 300px;
-    height: 215px;
+    height: 10%;
+    max-height: 260px;
     background: var(--light);
     margin: 30px 10px;
     padding: 20px 15px;
@@ -40,11 +41,13 @@ body {
     display: flex;
     flex-direction: column;
     box-shadow: 0 5px 20px rgba(0, 0, 0, 0.5);
-    transition: 0.3s ease-in-out;
+    transition: 0.5s;
 }
 
 .container .card:hover {
-    height: 420px;
+    max-height: 800px;
+    height: 100%;
+    transition:all 0.5s;
 }
 
 .container .card .imgBx {
@@ -61,9 +64,8 @@ body {
     border-radius: 4px;
     width: 100%;
     object-fit: cover;
-    max-height: 260px;
+    height: 100%;
 }
-
 
 .container .card .content {
     position: relative;
@@ -72,12 +74,12 @@ body {
     color: #111;
     visibility: hidden;
     opacity: 0;
-    transition: 0.3s ease-in-out;
+    transition: 0.5s;
 }
 
 .container .card:hover .content {
     visibility: visible;
     opacity: 1;
     margin-top: -40px;
-    transition-delay: 0.3s;
+    transition-delay: 0.2s;
 }
